Fix rendering of multiplier indicator on mobile
On mobile, the guild-base-container did not have enough space to
properly render the "2x" indicator in a single row

Remove spacing in the 2x indicator JSX, and adjust the size of the icon
specifically for the Builder Guild icon to ensure there is enough space
to render "2x" in a single row

--- a/src/components/Score/GuildBase/guildBase.css
+++ b/src/components/Score/GuildBase/guildBase.css
@@ -28,3 +28,7 @@
 .guild-icon {
   height: 4em;
 }
+
+.builder-guild-icon {
+  height: 3.5em;
+}
